# dishonest_gillionaire

./: .dockerignore  .env.example  .gitignore  README.md  TODO.md  db.sqlite3  docker-compose.yml  junk.items.json  probs-junk.py  pyproject.toml  requirements.txt  scratch.txt
3rd_party_sample_data/: universalis-market-data-example.json  universalis-sale-history-example.json  xivapi-item-example.json  xivapi-recipe-example.json  xivapi-recipe-list.json
app/: admin.py  api_handling.py  facts_handling.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_item_is_dyeable_item_is_glamourous_item_is_unique_and_more.py  0002_recipe_profession_alter_recipe_item.py  0002_sale_created_at_alter_listing_created_at.py  0003_item_facts_updated_at_item_listsings_updated_at_and_more.py  0003_item_vendor_price.py  0003_recipe_can_be_hq.py  0004_datacenter_region_alter_recipe_item_and_more.py  0004_listing_datacenter_sale_datacenter_and_more.py  0005_item_display_name.py  0005_item_level.py  0006_item_equip_level.py  0006_worlditemfact_listing_hq_sale_hq.py  0007_rename_level_item_item_level.py  0007_runtime.py  0008_bestcraftpricing_bestpurchasepricing.py  0009_remove_worlditemfact_hq_list_high_and_more.py  0010_bestpurchasepricing_app_bestpur_item_id_74f9a4_idx_and_more.py  0011_bestcraftpricing_datacenter_bestcraftpricing_home_and_more.py  0013_craftlist.py  (+3 more)
config/: settings.py  urls.py
templates/: _search_bar.html  base.html  home.html  item_index.html  item_pricing.html  item_show.html  search_results.html
(+59 files in other folders)
