[tool.poetry]
name = "dishonest_gillionaire"
version = "0.1.0"
description = ""
authors = ["Chris Cummings <chriscummings@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
