[tool.poetry]
name = "dishonest_gillionaire"
version = "0.1.0"
description = "A Final Fantasy XIV marketable item tool."
authors = ["Chris Cummings <chris@chriscummings.net>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
requests = "^2.28.2"
psycopg2 = "^2.9.5"
ratelimit = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
